@@ -5,7 +5,6 @@ import nodeinfo.ComponentInfo;
 import nodeinfo.LongestPathInfo;
 import nodeinfo.NodeInfo;
 import nodeinfo.TreeInfo;
-import utility.ApproximateComparator;
 
 import java.io.*;
 import java.util.*;
@@ -14,57 +13,55 @@ import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 public class Graph {
-    //    private static final Comparator<List<Integer>> pair_comparator = Comparator.<List<Integer>>comparingInt(l -> l.get(0)).
-//            thenComparing(l -> l.get(1));
-    //    private final double double_comparison_tolerance = 0.0001;
-    private final double score_comparison_tolerance = 0.1;
-    //    private final Comparator<Double> double_comparator = new utility.ApproximateComparator(double_comparison_tolerance);
-    private final Comparator<Double> score_comparator = new ApproximateComparator(score_comparison_tolerance);
-    private List<Node> nodes = new ArrayList<>();
-    private List<Edge> edges = new ArrayList<>();
-    private Set<Path> cached_paths = null;
+    private final List<Node> nodes;
+    private final List<Edge> edges;
+    private final int totalSize;
+    private Set<Path> cachedPaths = null;
 
     public Graph() {
+        this(new ArrayList<>());
     }
 
     public Graph(List<Node> nodes) {
         this.nodes = nodes;
+        edges = new ArrayList<>();
+        totalSize = nodes.stream().mapToInt(Node::getSize).sum();
     }
 
-    private static <T extends NodeInfo> Stream<T> get_neighbours_stream(T node, List<T> graph) {
-        return node.get_node().edges.stream().map(e -> graph.get(e.get_second().id));
+    private static <T extends NodeInfo> Stream<T> getNeighboursStream(T node, List<T> graph) {
+        return node.getNode().getEdges().stream().map(e -> graph.get(e.getSecond().getId()));
     }
 
     // O(V + E)
-    private static void set_tree_info(TreeInfo current, int level, List<TreeInfo> tree) {
+    private static void setTreeInfo(TreeInfo current, int level, List<TreeInfo> tree) {
         current.visited = true;
         current.level = level;
-        List<TreeInfo> children = get_neighbours_stream(current, tree).filter(i -> !i.visited).collect(Collectors.toList());
+        List<TreeInfo> children = getNeighboursStream(current, tree).filter(i -> !i.visited).collect(Collectors.toList());
         if (!children.isEmpty()) {
-            children.forEach(c -> set_tree_info(c, level + 1, tree));
-            current.subtree_size = children.stream().mapToInt(c -> c.subtree_size).sum() + 1;
+            children.forEach(c -> setTreeInfo(c, level + 1, tree));
+            current.subtreeSize = children.stream().mapToInt(c -> c.subtreeSize).sum() + 1;
         }
     }
 
-    private static TreeInfo get_parent(TreeInfo current, List<TreeInfo> tree) {
-        return get_neighbours_stream(current, tree).filter(n -> n.level < current.level).findFirst().orElse(null);
+    private static TreeInfo getParent(TreeInfo current, List<TreeInfo> tree) {
+        return getNeighboursStream(current, tree).filter(n -> n.level < current.level).findFirst().orElse(null);
     }
 
     // O(V + E)
     // returns previous size
-    private static int update_tree_sizes(int tweak_size, TreeInfo current, List<TreeInfo> tree) {
-        TreeInfo parent = get_parent(current, tree);
-        int current_size = current.subtree_size;
-        current.subtree_size -= tweak_size;
-        return parent == null ? current_size : update_tree_sizes(tweak_size, parent, tree);
+    private static int updateTreeSizes(int tweakSize, TreeInfo current, List<TreeInfo> tree) {
+        TreeInfo parent = getParent(current, tree);
+        int currentSize = current.subtreeSize;
+        current.subtreeSize -= tweakSize;
+        return parent == null ? currentSize : updateTreeSizes(tweakSize, parent, tree);
     }
 
-    private static void add_multiset_value(Map<Integer, Integer> map, Integer value) {
+    private static void addMultisetValue(Map<Integer, Integer> map, Integer value) {
         map.computeIfAbsent(value, v -> 0);
         map.put(value, map.get(value) + 1);
     }
 
-    private static void remove_multiset_value(Map<Integer, Integer> map, Integer value) {
+    private static void removeMultisetValue(Map<Integer, Integer> map, Integer value) {
         int count = map.get(value);
         if (count == 0) {
             System.err.println("Error: value is absent");
@@ -76,276 +73,280 @@ public class Graph {
         map.put(value, count - 1);
     }
 
-    private static void update_components_sizes(Map<Integer, Integer> components_sizes, int old_component_size, int new_component1_size,
-                                                int new_component2_size) {
-        remove_multiset_value(components_sizes, old_component_size);
-        add_multiset_value(components_sizes, new_component1_size);
-        add_multiset_value(components_sizes, new_component2_size);
+    private static void updateComponentsSizes(Map<Integer, Integer> componentsSizes, int oldComponentSize, int newComponent1Size, int newComponent2Size) {
+        removeMultisetValue(componentsSizes, oldComponentSize);
+        addMultisetValue(componentsSizes, newComponent1Size);
+        addMultisetValue(componentsSizes, newComponent2Size);
     }
 
-    private static void set_component_info(ComponentInfo current, int component, List<ComponentInfo> all_info) {
+    private static void setComponentInfo(ComponentInfo current, int component, List<ComponentInfo> all_info) {
         current.visited = true;
         current.component = component;
-        get_neighbours_stream(current, all_info).filter(n -> !n.visited).forEach(n -> set_component_info(n, component, all_info));
+        getNeighboursStream(current, all_info).filter(n -> !n.visited).forEach(n -> setComponentInfo(n, component, all_info));
     }
 
-    public static Graph get_from_input_stream(InputStream input_stream) {
-        Scanner in = new Scanner(input_stream);
-        int vertices_amount = in.nextInt();
-        int edges_amount = in.nextInt();
-        Graph graph = new Graph();
-        graph.nodes = IntStream.range(0, vertices_amount).mapToObj(Node::new).collect(Collectors.toList());
-        for (int i = 0; i < edges_amount; ++i) {
-            int node1_id = in.nextInt();
-            int node2_id = in.nextInt();
+    public static Graph getFromInputStream(InputStream inputStream) {
+        Scanner in = new Scanner(inputStream);
+        int verticesAmount = in.nextInt();
+        int edgesAmount = in.nextInt();
+        List<Node> nodes = IntStream.range(0, verticesAmount).mapToObj(Node::new).collect(Collectors.toList());
+        Graph graph = new Graph(nodes);
+        for (int i = 0; i < edgesAmount; ++i) {
+            int node1Id = in.nextInt();
+            int node2Id = in.nextInt();
             double weight = in.nextDouble();
-            graph.add_bidirectional_edge(graph.nodes.get(node1_id), graph.nodes.get(node2_id), weight);
+            graph.addBidirectionalEdge(graph.nodes.get(node1Id), graph.nodes.get(node2Id), weight);
         }
         return graph;
     }
 
-    public void add_bidirectional_edge(Node node1, Node node2, double weight) {
-        add_edge(node1, node2, weight);
-        add_edge(node2, node1, weight);
+    public void addBidirectionalEdge(Node node1, Node node2, double weight) {
+        addEdge(node1, node2, weight);
+        addEdge(node2, node1, weight);
     }
 
-    public Edge add_edge(Node node1, Node node2, double weight) {
-        Edge new_edge = new Edge(node1, node2, weight);
-        node1.edges.add(new_edge);
-        edges.add(new_edge);
-        return new_edge;
+    public Edge addEdge(Node node1, Node node2, double weight) {
+        Edge newEdge = new Edge(node1, node2, weight);
+        node1.getEdges().add(newEdge);
+        edges.add(newEdge);
+        return newEdge;
     }
 
-    private static <T extends NodeInfo> T get_corresponding_info(Node node, List<T> all_infos) {
-        return all_infos.get(node.id);
+    private static <T extends NodeInfo> T getCorrespondingInfo(Node node, List<T> allInfos) {
+        return allInfos.get(node.getId());
     }
 
-    private static <T extends NodeInfo> List<Integer> get_ids(List<T> infos) {
-        return infos.stream().map(i -> i.get_node().id).collect(Collectors.toList());
+    private static <T extends NodeInfo> List<Integer> getIds(List<T> infos) {
+        return infos.stream().map(i -> i.getNode().getId()).collect(Collectors.toList());
     }
 
-    public static Edge get_connecting_edge(Node first, Node second) {
-        return first.edges.stream().filter(e -> e.get_second() == second).findFirst().orElse(null);
+    public static Edge getConnectingEdge(Node first, Node second) {
+        return first.getEdges().stream().filter(e -> e.getSecond() == second).findFirst().orElse(null);
     }
 
-    private static <T extends Collection<Path>> T trim_paths(T paths, PathEstimator estimator) {
+    private static <T extends Collection<Path>> T trimPaths(T paths, PathEstimator estimator) {
         for (Path path : paths) {
-            path.used_ids.remove(path.edges.get(0).second.id);
-            path.used_ids.remove(path.edges.get(path.edges.size() - 1).second.id);
-            path.edges.subList(0, 2).clear();
-            Node first = path.edges.get(0).first;
-            path.edges.add(0, new Edge(null, first, 0));
-            path.edges.remove(path.edges.size() - 1);
-            path.total_nodes -= 2;
-            path.score = estimator.path_score(path);
+            path.getUsedIds().remove(path.getEdges().get(0).getSecond().getId());
+            path.getUsedIds().remove(path.getEdges().get(path.getEdges().size() - 1).getSecond().getId());
+            path.getEdges().subList(0, 2).clear();
+            Node first = path.getEdges().get(0).getFirst();
+            path.getEdges().add(0, new Edge(null, first, 0));
+            path.getEdges().remove(path.getEdges().size() - 1);
+            path.setTotalNodes(path.getTotalNodes() - 2);
+            path.setScore(estimator.pathScore(path));
         }
         return paths;
     }
 
-    private static Set<Path> connect_component_paths(Set<Path> node1_paths, Set<Path> node2_paths, PathEstimator estimator) {
+    private static Set<Path> connectComponentPaths(Set<Path> node1Paths, Set<Path> node2Paths, PathEstimator estimator) {
         Set<Path> result = new HashSet<>();
-        result.addAll(node1_paths);
-        result.addAll(node2_paths);
-        for (Path path1 : node1_paths) {
-            for (Path path2 : node2_paths) {
-                Path connected = estimator.merge_paths(path1, path2);
+        result.addAll(node1Paths);
+        result.addAll(node2Paths);
+        for (Path path1 : node1Paths) {
+            for (Path path2 : node2Paths) {
+                Path connected = estimator.mergePaths(path1, path2);
                 if (connected != null) {
                     result.add(connected);
+                    if (connected.getTotalNodes() > 11) {
+                        System.out.println(connected);
+                    }
                 }
             }
         }
         return result;
     }
 
-    private static Set<Path> sift_paths(Set<Path> all_paths, long max_paths) {
-        if (all_paths.size() <= max_paths) {
-            return all_paths;
+    private static Set<Path> siftPaths(Set<Path> allPaths, long maxPaths, PathEstimator estimator) {
+        if (allPaths.size() <= maxPaths) {
+            return allPaths;
         }
-        return all_paths.stream().sorted(Comparator.comparingDouble(p -> -p.score)).limit(max_paths).
-                collect(Collectors.toCollection(HashSet::new));
+        return allPaths.stream().sorted(estimator).limit(maxPaths).collect(Collectors.toCollection(HashSet::new));
+    }
+
+    public int getTotalSize() {
+        return totalSize;
     }
 
     // connects components of this graph with edges of infinite weight
     // returns list of added edges
-    private List<Edge> connect_components() {
+    private List<Edge> connectComponents() {
         List<Edge> result = new ArrayList<>();
-        List<ComponentInfo> component_infos = get_component_info();
-        Map<Integer, List<ComponentInfo>> component_groups = component_infos.stream().collect(Collectors.groupingBy(ci -> ci.component));
-        List<List<ComponentInfo>> groups = new ArrayList<>(component_groups.values());
-        for (int i = 0; i < component_groups.size() - 1; ++i) {
-            Node current_component_member = groups.get(i).get(0).node;
-            Node next_component_member = groups.get(i + 1).get(0).node;
-            Edge new_edge1 = add_edge(current_component_member, next_component_member, Double.POSITIVE_INFINITY);
-            Edge new_edge2 = add_edge(next_component_member, current_component_member, Double.POSITIVE_INFINITY);
-            result.add(new_edge1);
-            result.add(new_edge2);
+        List<ComponentInfo> componentInfos = getComponentInfo();
+        Map<Integer, List<ComponentInfo>> componentGroups = componentInfos.stream().collect(Collectors.groupingBy(ci -> ci.component));
+        List<List<ComponentInfo>> groups = new ArrayList<>(componentGroups.values());
+        for (int i = 0; i < componentGroups.size() - 1; ++i) {
+            Node currentComponentMember = groups.get(i).get(0).node;
+            Node nextComponentMember = groups.get(i + 1).get(0).node;
+            Edge newEdge1 = addEdge(currentComponentMember, nextComponentMember, Double.POSITIVE_INFINITY);
+            Edge newEdge2 = addEdge(nextComponentMember, currentComponentMember, Double.POSITIVE_INFINITY);
+            result.add(newEdge1);
+            result.add(newEdge2);
         }
         return result;
     }
 
     // O(E * log(V))
-    public Graph minimal_spanning_tree() {
-        List<Edge> fictive = connect_components();
-        List<Boolean> is_in_tree = new ArrayList<>(Collections.nCopies(nodes.size(), false));
-        PriorityQueue<Edge> edge_queue = new PriorityQueue<>(Comparator.comparingDouble(e -> e.weight));
+    public Graph minimalSpanningTree() {
+        List<Edge> fictive = connectComponents();
+        List<Boolean> isInTree = new ArrayList<>(Collections.nCopies(nodes.size(), false));
+        PriorityQueue<Edge> edgeQueue = new PriorityQueue<>(Comparator.comparingDouble(Edge::getWeight));
 
-        Graph result = new Graph();
-        result.nodes = nodes.stream().map(n -> new Node(n.id)).collect(Collectors.toList());
+        List<Node> new_nodes = nodes.stream().map(n -> new Node(n.getId())).collect(Collectors.toList());
+        Graph result = new Graph(new_nodes);
 
         Node start = nodes.get(0);
-        is_in_tree.set(start.id, true);
-        start.edges.forEach(edge_queue::add);
+        isInTree.set(start.getId(), true);
+        start.getEdges().forEach(edgeQueue::add);
 
-        int nodes_left = nodes.size() - 1;
-        while (nodes_left > 0) {
-            Edge next_edge = edge_queue.poll();
-            if (is_in_tree.get(next_edge.second.id)) {
+        int nodesLeft = nodes.size() - 1;
+        while (nodesLeft > 0) {
+            Edge nextEdge = edgeQueue.poll();
+            if (isInTree.get(nextEdge.getSecond().getId())) {
                 continue;
             }
-            result.add_bidirectional_edge(result.nodes.get(next_edge.first.id), result.nodes.get(next_edge.second.id), next_edge.weight);
-            Node new_node = next_edge.second;
-            is_in_tree.set(new_node.id, true);
-            new_node.edges.stream().filter(e -> !is_in_tree.get(e.second.id)).forEach(edge_queue::add);
-            nodes_left -= 1;
+            result.addBidirectionalEdge(result.nodes.get(nextEdge.getFirst().getId()), result.nodes.get(nextEdge.getSecond().getId()), nextEdge.getWeight());
+            Node newNode = nextEdge.getSecond();
+            isInTree.set(newNode.getId(), true);
+            newNode.getEdges().stream().filter(e -> !isInTree.get(e.getSecond().getId())).forEach(edgeQueue::add);
+            nodesLeft -= 1;
         }
-        remove_edges(fictive);
+        removeEdges(fictive);
         return result;
     }
 
     // O(V + E)
-    public List<TreeInfo> collect_tree_info() {
+    public List<TreeInfo> collectTreeInfo() {
         List<TreeInfo> result = nodes.stream().map(TreeInfo::new).collect(Collectors.toList());
-        set_tree_info(result.get(0), 0, result);
+        setTreeInfo(result.get(0), 0, result);
         return result;
     }
 
-    private void split_by_edge(Edge edge, Map<Integer, Integer> component_sizes, List<TreeInfo> tree, Graph mst) {
-        TreeInfo node1 = tree.get(edge.first.id);
-        TreeInfo node2 = tree.get(edge.second.id);
+    private void splitByEdge(Edge edge, Map<Integer, Integer> componentSizes, List<TreeInfo> tree, Graph mst) {
+        TreeInfo node1 = tree.get(edge.getFirst().getId());
+        TreeInfo node2 = tree.get(edge.getSecond().getId());
         TreeInfo parent = node1.level < node2.level ? node1 : node2;
         TreeInfo child = node1.level > node2.level ? node1 : node2;
-        int old_size = update_tree_sizes(child.subtree_size, parent, tree);
-        update_components_sizes(component_sizes, old_size, old_size - child.subtree_size, child.subtree_size);
-        mst.remove_bidirectional_edge(edge);
+        int oldSize = updateTreeSizes(child.subtreeSize, parent, tree);
+        updateComponentsSizes(componentSizes, oldSize, oldSize - child.subtreeSize, child.subtreeSize);
+        mst.removeBidirectionalEdge(edge);
     }
 
-    public List<ComponentInfo> get_component_info() {
+    public List<ComponentInfo> getComponentInfo() {
         List<ComponentInfo> result = nodes.stream().map(ComponentInfo::new).collect(Collectors.toList());
         int component = 0;
         for (int i = 0; i < result.size(); ++i) {
             if (!result.get(i).visited) {
-                set_component_info(result.get(i), component, result);
+                setComponentInfo(result.get(i), component, result);
                 component += 1;
             }
         }
         return result;
     }
 
-    public void remove_edges(Collection<Edge> edges) {
-        edges.forEach(this::remove_edge);
+    public void removeEdges(Collection<Edge> edges) {
+        edges.forEach(this::removeEdge);
     }
 
-    public void remove_edge(Edge edge) {
-        edge.first.edges.remove(edge);
+    public void removeEdge(Edge edge) {
+        edge.getFirst().getEdges().remove(edge);
         edges.remove(edge);
     }
 
-    public void remove_bidirectional_edge(Edge edge) {
-        Edge reverse = get_connecting_edge(edge.second, edge.first);
-        remove_edge(edge);
-        remove_edge(reverse);
+    public void removeBidirectionalEdge(Edge edge) {
+        Edge reverse = getConnectingEdge(edge.getSecond(), edge.getFirst());
+        removeEdge(edge);
+        removeEdge(reverse);
     }
 
     // O(V + E)
     // ids should be unique
     // underlying graph is copying by reference
-    public Graph subgraph(List<Integer> node_ids) {
-        List<Integer> id_correspondence = new ArrayList<>(Collections.nCopies(nodes.size(), -1));
-        IntStream.range(0, node_ids.size()).forEach(i -> id_correspondence.set(node_ids.get(i), i));
+    public Graph subgraph(List<Integer> nodeIds) {
+        List<Integer> idCorrespondence = new ArrayList<>(Collections.nCopies(nodes.size(), -1));
+        IntStream.range(0, nodeIds.size()).forEach(i -> idCorrespondence.set(nodeIds.get(i), i));
 
-        List<Boolean> is_selected = new ArrayList<>(Collections.nCopies(nodes.size(), false));
-        node_ids.forEach(i -> is_selected.set(i, true));
+        List<Boolean> isSelected = new ArrayList<>(Collections.nCopies(nodes.size(), false));
+        nodeIds.forEach(i -> isSelected.set(i, true));
 
-        List<Node> new_nodes = IntStream.range(0, node_ids.size()).mapToObj(i -> Node.fork_other(i, nodes.get(node_ids.get(i)))).
+        List<Node> newNodes = IntStream.range(0, nodeIds.size()).mapToObj(i -> Node.forkOther(i, nodes.get(nodeIds.get(i)))).
                 collect(Collectors.toList());
-        Graph new_graph = new Graph(new_nodes);
-        edges.stream().filter(e -> is_selected.get(e.first.id) && is_selected.get(e.second.id)).forEach(e -> new_graph.
-                add_edge(new_nodes.get(id_correspondence.get(e.first.id)), new_nodes.get(id_correspondence.get(e.second.id)), e.weight));
-        return new_graph;
+        Graph newGraph = new Graph(newNodes);
+        edges.stream().filter(e -> isSelected.get(e.getFirst().getId()) && isSelected.get(e.getSecond().getId())).forEach(e -> newGraph.
+                addEdge(newNodes.get(idCorrespondence.get(e.getFirst().getId())), newNodes.get(idCorrespondence.get(e.getSecond().getId())), e.getWeight()));
+        return newGraph;
     }
 
-    private Map<List<Integer>, Double> deduce_component_edges(List<Node> component_nodes, List<ComponentInfo> decomposition_info) {
-        Map<List<Integer>, List<Double>> new_edges_info = new HashMap<>();
+    private Map<List<Integer>, Double> deduceComponentEdges(List<Node> componentNodes, List<ComponentInfo> decompositionInfo) {
+        Map<List<Integer>, List<Double>> newEdgesInfo = new HashMap<>();
         for (Edge e : edges) {
-            Node first = component_nodes.get(get_corresponding_info(e.first, decomposition_info).component);
-            Node second = component_nodes.get(get_corresponding_info(e.second, decomposition_info).component);
+            Node first = componentNodes.get(getCorrespondingInfo(e.getFirst(), decompositionInfo).component);
+            Node second = componentNodes.get(getCorrespondingInfo(e.getSecond(), decompositionInfo).component);
 
             if (first != second) {
-                List<Integer> edge_description = Arrays.asList(first.id, second.id);
-                new_edges_info.putIfAbsent(edge_description, new ArrayList<>());
-                new_edges_info.get(edge_description).add(e.weight);
+                List<Integer> edgeDescription = Arrays.asList(first.getId(), second.getId());
+                newEdgesInfo.putIfAbsent(edgeDescription, new ArrayList<>());
+                newEdgesInfo.get(edgeDescription).add(e.getWeight());
             }
         }
         Map<List<Integer>, Double> result = new HashMap<>();
-        new_edges_info.entrySet().forEach(e -> result.put(e.getKey(), e.getValue().stream().collect(Collectors.averagingDouble(d -> d))));
+        newEdgesInfo.entrySet().forEach(e -> result.put(e.getKey(), e.getValue().stream().collect(Collectors.averagingDouble(d -> d))));
         return result;
     }
 
     // O(V * (V + E) * log(V))
     // Supports only connected graphs. If graph is disconnected then it will be made connected.
-    public Graph hierarchical_decomposition(int max_vertices_per_graph) {
-        if (max_vertices_per_graph <= 1) {
+    public Graph hierarchicalDecomposition(int maxVerticesPerGraph) {
+        if (maxVerticesPerGraph <= 1) {
             throw new RuntimeException("Max vertices should be >= 2");
         }
-        if (nodes.size() <= max_vertices_per_graph) {
+        if (nodes.size() <= maxVerticesPerGraph) {
             return this;
         }
-        List<ComponentInfo> decomposition_info = decomposition_info(max_vertices_per_graph);
-        Map<Integer, List<ComponentInfo>> components = decomposition_info.stream().collect(Collectors.groupingBy(ci -> ci.component));
-        List<Node> new_nodes = IntStream.range(0, components.size()).mapToObj(Node::new).collect(Collectors.toList());
+        List<ComponentInfo> decompositionInfo = decompositionInfo(maxVerticesPerGraph);
+        Map<Integer, List<ComponentInfo>> components = decompositionInfo.stream().collect(Collectors.groupingBy(ci -> ci.component));
+        List<Node> newNodes = new ArrayList<>(Collections.nCopies(components.size(), new Node(0)));
         for (Map.Entry<Integer, List<ComponentInfo>> entry : components.entrySet()) {
-            Graph subgraph = subgraph(get_ids(entry.getValue()));
-            new_nodes.get(entry.getKey()).set_underlying_graph(subgraph);
-            new_nodes.get(entry.getKey()).size = subgraph.nodes.stream().mapToInt(n -> n.size).sum();
+            Graph subgraph = subgraph(getIds(entry.getValue()));
+            newNodes.set(entry.getKey(), new Node(entry.getKey(), subgraph, -1));
         }
-        Graph new_graph = new Graph(new_nodes);
-        Map<List<Integer>, Double> new_edges = deduce_component_edges(new_nodes, decomposition_info);
-        for (Map.Entry<List<Integer>, Double> e : new_edges.entrySet()) {
-            new_graph.add_edge(new_nodes.get(e.getKey().get(0)), new_nodes.get(e.getKey().get(1)), e.getValue());
+        Graph newGraph = new Graph(newNodes);
+        Map<List<Integer>, Double> newEdges = deduceComponentEdges(newNodes, decompositionInfo);
+        for (Map.Entry<List<Integer>, Double> e : newEdges.entrySet()) {
+            newGraph.addEdge(newNodes.get(e.getKey().get(0)), newNodes.get(e.getKey().get(1)), e.getValue());
         }
-        return new_graph.hierarchical_decomposition(max_vertices_per_graph);
+        return newGraph.hierarchicalDecomposition(maxVerticesPerGraph);
     }
 
     // O(V * (V + E))
-    public List<ComponentInfo> decomposition_info(int max_vertices_per_graph) {
-        Graph mst = minimal_spanning_tree();
-        List<TreeInfo> tree_info = mst.collect_tree_info();
+    public List<ComponentInfo> decompositionInfo(int maxVerticesPerGraph) {
+        Graph mst = minimalSpanningTree();
+        List<TreeInfo> treeInfo = mst.collectTreeInfo();
 
-        PriorityQueue<Edge> edge_queue = new PriorityQueue<>(Comparator.comparingDouble(e -> -e.weight));
-        edge_queue.addAll(mst.edges.stream().filter(e -> e.first.id < e.second.id).collect(Collectors.toList()));
+        PriorityQueue<Edge> edgeQueue = new PriorityQueue<>(Comparator.comparingDouble(e -> -e.getWeight()));
+        edgeQueue.addAll(mst.edges.stream().filter(e -> e.getFirst().getId() < e.getSecond().getId()).collect(Collectors.toList()));
 
-        TreeMap<Integer, Integer> component_sizes = new TreeMap<>();
-        component_sizes.put(nodes.size(), 1);
-        while (component_sizes.lastKey() > max_vertices_per_graph) {
-            Edge max_edge = edge_queue.poll();
-            split_by_edge(max_edge, component_sizes, tree_info, mst);
+        TreeMap<Integer, Integer> componentSizes = new TreeMap<>();
+        componentSizes.put(nodes.size(), 1);
+        while (componentSizes.lastKey() > maxVerticesPerGraph) {
+            Edge max_edge = edgeQueue.poll();
+            splitByEdge(max_edge, componentSizes, treeInfo, mst);
         }
-        return mst.get_component_info();
+        return mst.getComponentInfo();
     }
 
-    private void add_source_sink() {
+    private void addSourceSink() {
         Node source = new Node(nodes.size());
         Node sink = new Node(nodes.size() + 1);
-        nodes.forEach(n -> add_edge(source, n, 0));
-        nodes.forEach(n -> add_edge(n, sink, 0));
+        nodes.forEach(n -> addEdge(source, n, 0));
+        nodes.forEach(n -> addEdge(n, sink, 0));
         nodes.add(source);
         nodes.add(sink);
     }
 
-    public void write_dot_to_file(String filename) {
+    public void writeAsDotToFile(String filename) {
         try {
             FileOutputStream output = new FileOutputStream(filename);
-            write_dot_representation(output);
+            writeDotRepresentation(output);
             output.close();
         }
         catch (IOException exception) {
@@ -353,201 +354,122 @@ public class Graph {
         }
     }
 
-    public void write_dot_representation(OutputStream output_stream) {
-        PrintWriter writer = new PrintWriter(output_stream);
+    public void writeDotRepresentation(OutputStream outputStream) {
+        PrintWriter writer = new PrintWriter(outputStream);
         writer.println("digraph {");
-        edges.forEach(e -> writer.format("%d -> %d [weight=%.0f label=%.0f]%n", e.first.id, e.second.id, e.weight, e.weight));
+        nodes.forEach(n -> writer.format("%d [label=%d];%n", n.getId(), n.getId()));
+        edges.forEach(e -> writer.format("%d -> %d [weight=%.0f label=%.0f];%n", e.getFirst().getId(), e.getSecond().getId(), e.getWeight(), e.getWeight()));
         writer.println("}");
         writer.flush();
     }
 
-    private Path map_path(Path decomposed, Graph initial) {
-        List<Edge> initial_edges = new ArrayList<>();
-        Node previous_vertex = initial.nodes.get(decomposed.edges.get(0).second.old_id);
-        initial_edges.add(new Edge(null, previous_vertex, 0));
-        for (int i = 1; i < decomposed.edges.size(); ++i) {
-            Node next_vertex = initial.nodes.get(decomposed.edges.get(i).second.old_id);
-            Edge connecting_edge = get_connecting_edge(previous_vertex, next_vertex);
-            initial_edges.add(connecting_edge);
-            previous_vertex = next_vertex;
+    private Path mapPath(Path decomposed, Graph initial) {
+        List<Edge> initialEdges = new ArrayList<>();
+        Node previousVertex = initial.nodes.get(decomposed.getEdges().get(0).getSecond().getOldId());
+        initialEdges.add(new Edge(null, previousVertex, 0));
+        for (int i = 1; i < decomposed.getEdges().size(); ++i) {
+            Node nextVertex = initial.nodes.get(decomposed.getEdges().get(i).getSecond().getOldId());
+            Edge connectingEdge = getConnectingEdge(previousVertex, nextVertex);
+            initialEdges.add(connectingEdge);
+            previousVertex = nextVertex;
         }
-        Set<Integer> used_ids = new HashSet<>();
-        initial_edges.forEach(e -> used_ids.add(e.second.id));
-        return new Path(used_ids, initial_edges, decomposed);
+        Set<Integer> usedIds = new HashSet<>();
+        initialEdges.forEach(e -> usedIds.add(e.getSecond().getId()));
+        return new Path(usedIds, initialEdges, decomposed);
     }
 
-    private Set<Path> map_paths(Set<Path> decomposed_paths, Graph initial) {
-        return decomposed_paths.stream().map(p -> map_path(p, initial)).collect(Collectors.toCollection(HashSet::new));
+    private Set<Path> mapPaths(Set<Path> decomposedPaths, Graph initial) {
+        return decomposedPaths.stream().map(p -> mapPath(p, initial)).collect(Collectors.toCollection(HashSet::new));
+    }
+
+    private void writeHierarchy(List<String> parentIds) {
+        String name = "graph" + String.join("_", parentIds) + ".dot";
+        writeAsDotToFile(name);
+        if (nodes.get(0).getUnderlyingGraph() == null) {
+            return;
+        }
+        for (int i = 0; i < nodes.size(); ++i) {
+            List<String> copy = new ArrayList<>(parentIds);
+            copy.add(String.valueOf(i));
+            nodes.get(i).getUnderlyingGraph().writeHierarchy(copy);
+        }
     }
 
     // O(log(V) * (V * (V + E) + T(merge)))
-    public Set<Path> calculate_suboptimal_longest_path(PathEstimator estimator, int max_nodes_per_graph, long max_paths_per_node) {
-        Graph decomposed = hierarchical_decomposition(max_nodes_per_graph);
-        decomposed.write_dot_to_file("meta.dot");
-        return decomposed.calculate_suboptimal_paths_helper(estimator, this, max_paths_per_node);
+    public Set<Path> calculateSuboptimalLongestPath(PathEstimator estimator, int maxNodesPerGraph, long maxPathsPerNode) {
+        Graph decomposed = hierarchicalDecomposition(maxNodesPerGraph);
+//        decomposed.writeHierarchy(new ArrayList<>());
+//        writeAsDotToFile("initial.dot");
+        return decomposed.calculateSuboptimalPathsHelper(estimator, this, maxPathsPerNode);
     }
 
     // O(log(V) * T(merge))
     // initial should be decomposed graph
-    private Set<Path> calculate_suboptimal_paths_helper(PathEstimator estimator, Graph initial, long max_paths_per_graph) {
-        if (cached_paths != null) {
-            return cached_paths;
+    private Set<Path> calculateSuboptimalPathsHelper(PathEstimator estimator, Graph initial, long maxPathsPerGraph) {
+        if (cachedPaths != null) {
+            return cachedPaths;
         }
-        add_source_sink();
-        LongestPathInfo path_info = calculate_longest_paths(nodes.size() - 2, estimator, max_paths_per_graph).get(nodes.size() - 1);
-        Set<Path> current_level_graph_paths = trim_paths(path_info.paths, estimator);
-        if (path_info.paths.iterator().next().edges.get(0).second.underlying_graph == null) {
-            Set<Path> mapped_paths = map_paths(current_level_graph_paths, initial);
-            cached_paths = sift_paths(mapped_paths, max_paths_per_graph);
-            return cached_paths;
+        addSourceSink();
+        LongestPathInfo pathInfo = calculateLongestPaths(nodes.size() - 2, estimator).get(nodes.size() - 1);
+        Set<Path> currentLevelGraphPaths = siftPaths(trimPaths(pathInfo.allPaths, estimator), maxPathsPerGraph, estimator);
+        if (pathInfo.allPaths.iterator().next().getEdges().get(0).getSecond().getUnderlyingGraph() == null) {
+            cachedPaths = mapPaths(currentLevelGraphPaths, initial);
+            return cachedPaths;
         }
 
-        Set<Path> all_underlying_path = new HashSet<>();
-        for (Path path : current_level_graph_paths) {
-            Set<Path> current_underlying_paths = path.edges.get(0).second.underlying_graph.
-                    calculate_suboptimal_paths_helper(estimator, initial, max_paths_per_graph);
-            for (int i = 1; i < path.edges.size(); ++i) {
-                Set<Path> next_node_underlying_paths = path.edges.get(i).second.underlying_graph.
-                        calculate_suboptimal_paths_helper(estimator, initial, max_paths_per_graph);
-                current_underlying_paths = connect_component_paths(current_underlying_paths, next_node_underlying_paths, estimator);
+        Set<Path> allUnderlyingPath = new HashSet<>();
+        for (Path path : currentLevelGraphPaths) {
+            Set<Path> currentUnderlyingPaths = path.getEdges().get(0).getSecond().getUnderlyingGraph().
+                    calculateSuboptimalPathsHelper(estimator, initial, maxPathsPerGraph);
+            for (int i = 1; i < path.getEdges().size(); ++i) {
+                Set<Path> nextNodeUnderlyingPaths = path.getEdges().get(i).getSecond().getUnderlyingGraph().
+                        calculateSuboptimalPathsHelper(estimator, initial, maxPathsPerGraph);
+                currentUnderlyingPaths = connectComponentPaths(currentUnderlyingPaths, nextNodeUnderlyingPaths, estimator);
             }
-            all_underlying_path.addAll(current_underlying_paths);
+            allUnderlyingPath.addAll(currentUnderlyingPaths);
         }
-        cached_paths = sift_paths(all_underlying_path, max_paths_per_graph);
-        return cached_paths;
+        cachedPaths = siftPaths(allUnderlyingPath, maxPathsPerGraph, estimator);
+        return cachedPaths;
     }
 
-    // O*(V!)
-    public List<LongestPathInfo> calculate_longest_paths(int start_node_id, PathEstimator estimator, long max_paths_per_node) {
-        List<LongestPathInfo> infos = nodes.stream().map(LongestPathInfo::new).collect(Collectors.toList());
-        LongestPathInfo start_node = infos.get(start_node_id);
-        Path trivial_path = Path.get_trivial_path(nodes.get(start_node_id), estimator);
-        start_node.paths.add(trivial_path);
-//        start_node.best_path = trivial_path;
-        List<Edge> all_edges = edges.stream().collect(Collectors.toList());
+    private void updateLongestPathsInfos(List<LongestPathInfo> toUpdate) {
+        for (LongestPathInfo info : toUpdate) {
+            info.currentPaths = info.nextPaths;
+            info.nextPaths = new HashSet<>();
+        }
+    }
 
-        boolean estimation_changed = true;
-        while (estimation_changed) {
-            estimation_changed = false;
-            // deep copy
-            List<LongestPathInfo> next_infos = infos.stream().map(LongestPathInfo::new).collect(Collectors.toList());
-            for (Edge edge : all_edges) {
-                LongestPathInfo node1_previous_info = infos.get(edge.first.id);
-                LongestPathInfo node2_next_info = next_infos.get(edge.second.id);
-                estimation_changed |= try_update_next(node1_previous_info, node2_next_info, edge, estimator, max_paths_per_node);
+    // O*(V^V)
+    public List<LongestPathInfo> calculateLongestPaths(int startNodeId, PathEstimator estimator) {
+        List<LongestPathInfo> infos = nodes.stream().map(LongestPathInfo::new).collect(Collectors.toList());
+//        writeAsDotToFile("test.dot");
+        LongestPathInfo startNode = infos.get(startNodeId);
+        Path trivialPath = Path.getTrivialPath(nodes.get(startNodeId), estimator);
+        startNode.allPaths.add(trivialPath);
+        startNode.currentPaths.add(trivialPath);
+        List<Edge> allEdges = edges.stream().collect(Collectors.toList());
+
+        boolean nextPathsPending = true;
+        while (nextPathsPending) {
+            nextPathsPending = false;
+            for (Edge edge : allEdges) {
+                LongestPathInfo node1Info = infos.get(edge.getFirst().getId());
+                LongestPathInfo node2Info = infos.get(edge.getSecond().getId());
+                nextPathsPending |= tryUpdateNext(node1Info, node2Info, edge, estimator);
             }
-            infos = next_infos;
+            updateLongestPathsInfos(infos);
         }
         return infos;
     }
 
-    // O*(V!)
-    // Tries to extend every edges in previous using next as next vertex. Replace best edges in next if any of the obtained paths will be
-    // better.
-    private boolean try_update_next(LongestPathInfo previous, LongestPathInfo next, Edge edge, PathEstimator estimator, long max_paths) {
-        List<Path> extended_paths = previous.paths.stream().filter(p -> !p.used_ids.contains(next.node.id)).
-                map(p -> Path.merge(p, Path.get_trivial_path(next.node, estimator), p.edges.size() - 1, 0, edge, estimator)).
+    // O*(V^V)
+    private boolean tryUpdateNext(LongestPathInfo previous, LongestPathInfo next, Edge edge, PathEstimator estimator) {
+        List<Path> extendedPaths = previous.currentPaths.stream().filter(p -> !p.getUsedIds().contains(next.node.getId())).
+                map(p -> Path.merge(p, Path.getTrivialPath(next.node, estimator), p.getEdges().size() - 1, 0, edge, estimator)).
+                filter(p -> !next.allPaths.contains(p)).
                 collect(Collectors.toList());
-        if (extended_paths.isEmpty()) {
-            return false;
-        }
-        next.paths.addAll(extended_paths);
-        next.paths = sift_paths(next.paths, max_paths);
-        return true;
-//        Path best_path = extended_paths.stream().max(Comparator.comparingDouble(p -> p.score)).get();
-//        if (score_comparator.compare(best_path.score, next.best_path.score) == 1) {
-//            next.best_path = best_path;
-//            next.paths.clear();
-//        }
-//
-//        List<Path> almost_equal = extended_paths.stream().filter(p -> score_comparator.compare(p.score, next.best_path.score) == 0).
-//                collect(Collectors.toList());
-//        int size_before_update = next.paths.size();
-//        next.paths.addAll(almost_equal);
-//        return next.paths.size() > size_before_update;
-    }
-
-    public List<Node> get_nodes() {
-        return nodes;
+        next.allPaths.addAll(extendedPaths);
+        next.nextPaths.addAll(extendedPaths);
+        return next.nextPaths.size() > 0;
     }
 }
-
-// Deprecated methods:
-
-//    public void pop_edge() {
-//        core.Edge removed = edges.poll();
-//        removed.first.edges.remove(removed);
-//        removed.second.edges.remove(removed);
-//    }
-
-// asymptotic: O(V + E * logE)
-//    public List<List<core.Node>> k_edge_pop_clusterization(int pop_amount) {
-//        for (int i = 0; i < pop_amount; ++i) {
-//            pop_edge();
-//        }
-//        return get_components();
-//    }
-
-// asymptotic: O(V + E * (logE + T(estimator)))
-//    public List<List<core.Node>> estimation_function_clusterization(estimators.GoodnessEstimator estimator, int steps_ahead) {
-//        List<List<core.Node>> best_clusterization = Collections.singletonList(nodes);
-//        double best_estimation = estimator.estimate_goodness(best_clusterization);
-//        int iterations_since_best = 0;
-//        while (iterations_since_best <= steps_ahead) {
-//            pop_edge();
-//            List<List<core.Node>> new_clusters = get_components();
-//            double goodness_estimation = estimator.estimate_goodness(new_clusters);
-//            if (goodness_estimation > best_estimation) {
-//                best_clusterization = new_clusters;
-//                best_estimation = goodness_estimation;
-//                iterations_since_best = 0;
-//            } else {
-//                iterations_since_best += 1;
-//            }
-//        }
-//        return best_clusterization;
-//    }
-
-//    public List<nodeinfo.DijkstraInfo> calculate_paths(int start_index, estimators.PathEstimator estimator) {
-//        List<core.Node> graph = nodes;
-//        List<nodeinfo.DijkstraInfo> nodes_info = graph.stream().map(n -> new nodeinfo.DijkstraInfo(n, null, Double
-// .POSITIVE_INFINITY)).
-//                collect(Collectors.toList());
-//        nodeinfo.DijkstraInfo start = nodes_info.get(start_index);
-//        start.distance = 0;
-//        PriorityQueue<nodeinfo.DijkstraInfo> info_queue = new PriorityQueue<>((a, b) -> Double.compare(a.distance, b.distance));
-//        info_queue.add(new nodeinfo.DijkstraInfo(start));
-//        while (!info_queue.isEmpty()) {
-//            nodeinfo.DijkstraInfo current_info = nodes_info.get(info_queue.poll().node.id);
-//            if (current_info.visited) {
-//                continue;
-//            }
-//            for (core.Edge edge : current_info.node.edges) {
-//                nodeinfo.DijkstraInfo adjacent = nodes_info.get(edge.get_second(current_info.node).id);
-//                if (current_info.distance + edge.weight < adjacent.distance && estimator.is_correct(adjacent, current_info)) {
-//                    adjacent.distance = current_info.distance + edge.weight;
-//                    adjacent.previous = current_info;
-//                    info_queue.add(new nodeinfo.DijkstraInfo(adjacent));
-//                }
-//            }
-//            current_info.visited = true;
-//        }
-//        return nodes_info;
-//    }
-
-// merges specified paths with every possible way according to edges in initial graph
-//    private static Set<Path> possible_connections(Path path1, Path path2, PathEstimator estimator) {
-//        Set<Path> result = new HashSet<>();
-//        for (int i = 0; i < path1.edges.size(); ++i) {
-//            for (int j = 0; j < path2.edges.size(); ++j) {
-//                Node path1_break_node = path1.edges.get(i).second;
-//                Node path2_break_node = path2.edges.get(j).second;
-//                Edge bridge = get_connecting_edge(path1_break_node, path2_break_node);
-//                if (bridge != null) {
-//                    Path connected = Path.merge(path1, path2, i, j, bridge, estimator);
-//                    result.add(connected);
-//                }
-//            }
-//        }
-//        return result;
-//    }
